# wasm-verify

./: .gitignore  AGENT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
examples/: analyze.rs
memory/: JOURNAL.md
sample/: Cargo.toml
sample/src/: lib.rs
src/: compat.rs  error.rs  exports.rs  imports.rs  lib.rs  parser.rs  report.rs  size.rs
tests/: integration.rs
