[package]
name = "wasm-verify"
version = "0.1.0"
edition = "2021"
description = "WebAssembly binary analysis, verification, and health reporting library"
license = "MIT"
repository = "https://github.com/SuperInstance/wasm-verify"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

[dev-dependencies]
tempfile = "3"
